# rapidGraph

./: .gitignore  LICENSE  README.md  SKILL.md  extract_graph.py  extract_graphv2.py  input.txt  input2.txt  pyproject.toml  requirements.txt  test.py
.github/workflows/: publish-testpypi.yml  publish.yml
rapidgraph/: __init__.py  cli.py  core.py  graphrag.py
tests/: test_extract_graph.py  test_extract_graphv2.py
